# jiuwenswarm

./: .gitignore  MANIFEST.in  OPEN_SOURCE_SOFTWARE_NOTICE.md  README.md  README_CN.md  TESTING.md  pyproject.toml  pytest.ini  run_tests.sh
deploy/func/: clawee.py
deploy/observability/: README.md  otel-collector-config.yaml  (+1 more)
docker/: Dockerfile.claw  Dockerfile.yr.rt.mgr
docs/: README.md  README_EN.md
jiuwenbox/: README.md  README_CN.md  pyproject.toml
jiuwenswarm/: app.py  dotenv_early.py  init_workspace.py  llm_sse_patch.py  package.json  start_services.py
jiuwenswarm/symphony/: __init__.py  build.py  config.py  environment.yml  llm.py  pyproject.toml  score_state.py  score_storage.py
jiuwenswarm/symphony/agent/: __init__.py  agentic_retrieval_toolkit.py  tool_result.py
jiuwenswarm/symphony/experience/: __init__.py  bank.py  cluster.py  collector.py  distiller.py  embed.py  evaluator.py  models.py
jiuwenswarm/symphony/experience/trace/: __init__.py  parser.py  store.py
jiuwenswarm/symphony/fingerprint/: __init__.py  artifacts.py  batching.py  incremental.py  manifest.py  models.py  pipeline.py  scan.py  utils.py
jiuwenswarm/symphony/fingerprint/extract/: __init__.py  extractor.py
jiuwenswarm/symphony/fingerprint/normalize/: __init__.py  data_type_vocab.py  data_type_vocab.yaml  data_types.py  decisions.py  fields.py  io_name_resolver.py  io_name_vocab.py  io_names.py  metadata_normalizer.py  normalizer.py  vocabulary.py
jiuwenswarm/symphony/graph/: __init__.py  builders.py  lexicon.py  models.py  pipeline.py  registry.py  writer.py
jiuwenswarm/symphony/graph/candidates/: __init__.py  generator.py
jiuwenswarm/symphony/graph/matcher/: __init__.py  cache.py  consensus.py  constants.py  matcher.py  openai.py  prompt.py  validation.py
jiuwenswarm/symphony/indexing/: __init__.py  doc.md  models.py
jiuwenswarm/symphony/indexing/catalog/: __init__.py  records.py
jiuwenswarm/symphony/indexing/io/: __init__.py  catalog.py  config_loader.py  items_jsonl.py  manifest.py  tree.py
jiuwenswarm/symphony/indexing/scanners/: __init__.py  base.py  common.py  skill.py
jiuwenswarm/symphony/indexing/tree/: __init__.py  builder.py  expansion.py  grouping.py  llm_runtime.py  preset_writer.py  presets.py  prompts.py  repair.py  root_categories.py  schema.py  types.py  visualizer.py
jiuwenswarm/symphony/indexing/workflows/: __init__.py  artifacts.py  index_builder.py  tree_ops.py
jiuwenswarm/symphony/models/: __init__.py
jiuwenswarm/symphony/models/cid/: __init__.py  converters.py  node_spec.py  tid.py  tree.py
jiuwenswarm/symphony/models/retrieval/: __init__.py  candidate.py  trace.py  tree.py
jiuwenswarm/symphony/orchestration/: __init__.py  artifacts.py  execution_graph.py  service.py  skill_retrieval.py
jiuwenswarm/symphony/orchestration/planning/: __init__.py  fast.py  input_matching.py  models.py  plan_builder.py  utils.py
jiuwenswarm/symphony/orchestration/utils/: naming.py
jiuwenswarm/symphony/retrieval/: __init__.py  algorithm.md  doc.md  truncation.py
jiuwenswarm/symphony/retrieval/io/: __init__.py  loading.py
jiuwenswarm/symphony/retrieval/llm/: __init__.py  config.py  factory.py
jiuwenswarm/symphony/retrieval/llm/base/: __init__.py  errors.py  protocols.py  scoring.py  tokenization.py  types.py
jiuwenswarm/symphony/retrieval/llm/openai_api/: client.py
jiuwenswarm/symphony/retrieval/llm/transformers_logit_selection/: __init__.py  client.py
jiuwenswarm/symphony/retrieval/llm/transformers_prefix_cached_generation/: __init__.py  cache.py  client.py  generation.py  warmup.py
jiuwenswarm/symphony/retrieval/llm/vllm/: __init__.py  client.py
jiuwenswarm/symphony/retrieval/merge/: __init__.py  append.py
jiuwenswarm/symphony/retrieval/protocols/: __init__.py  display_name.py  parsing.py  prompts.py
jiuwenswarm/symphony/retrieval/service/: __init__.py  defaults.py  models.py  retriever.py
jiuwenswarm/symphony/retrieval/tree/: __init__.py  codebooks.py  contracts.py  engine.py  expand.py  flat.py  progressive.py  reduce.py  types.py
jiuwenswarm/symphony/retrieval/tree/render/: __init__.py  default.py  disclosure.py  prompts.yaml
jiuwenswarm/symphony/retrieval/tree/select/: __init__.py  default.py  selection.py
jiuwenswarm/symphony/retrieval/tree/subtree/: __init__.py  default.py  roots.py
jiuwenswarm/symphony/shared/: __init__.py  profiling.py  rich_compat.py  storage.py
jiuwenswarm/symphony/skill_retrieval/: __init__.py  api.py  build_coordinator.py  catalog.py  config.py  dispatch_imports.py  index_service.py  inventory.py  markdown.py  retrieve_service.py  skill_tree.py  taxonomy_config.py
scripts/: build-exe.bat  build-exe.ps1  build-macos.sh  build.ps1  build.sh  build_python_packages.py  build_tui.py  installer.iss  jiuwenswarm.iss  jiuwenswarm.spec  jiuwenswarm_exe_entry.py  run_gateway_acp.cmd  run_gateway_acp.sh
tests/: README.md
(+892 files in other folders)
